k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cats-dogs-model-group85
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cats-dogs-model-group85
  template:
    metadata:
      labels:
        app: cats-dogs-model-group85
    spec:
      containers:
      - name: cats-dogs-prediction-api
        image: bashyan/mlops-cats-dogs:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "500m"
            memory: "128Mi"
          limits:
            cpu: "2000m"
            memory: "256Mi"
