k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cats-dogs-model-group85
spec:
  type: ClusterIP
  selector:
    app: cats-dogs-model-group85
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
